--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-Flask==2.2.2
-gunicorn==20.1.0
-h5py==3.9.0
-Jinja2==3.1.2
-keras==2.11.0
-numpy==1.25.2
-Pillow==9.4.0
-tensorflow==2.11.0
-Werkzeug==2.2.3
-
+Flask==2.1.3
+gunicorn==20.0.4
+h5py==3.7.0
+Jinja2==3.0.3
+Keras==2.9.0
+numpy==1.22.3
+Pillow==9.2.0
+tensorflow-cpu==2.9.1
+Werkzeug==2.0.3
 
 
 
